[tool.poetry]
name = "Heleus"
version = "2.0.0"
description = "A Discord bot forked from Liara. Built on disnake."
authors = ["derpychap <derpy@duck.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
uvloop = "^0.21.0"
dill = "^0.3.9"
raven = "^6.10.0"
strictyaml = "^1.7.3"
tabulate = "^0.9.0"
psutil = "^6.1.0"
disnake = { extras = ["voice"], version = "^2.9.3" }
coredis = { extras = ["hiredis"], version = "^4.20" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
