[tool.poetry]
name = "Heleus"
version = "2.0.0"
description = "A Discord bot forked from Liara. Built on disnake."
authors = ["derpychap <derpy@duck.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.14"
uvloop = "^0.22.1"
dill = "^0.4.1"
raven = "^6.10.0"
strictyaml = "^1.7.3"
tabulate = "^0.9.0"
psutil = "^7.2.1"
disnake = { extras = ["voice"], version = "^2.11.0" }
coredis = { extras = ["hiredis"], version = "^5.6" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
